--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.css
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.css
@@ -6,6 +6,7 @@
 }
 
 .card img {
+    height: 128px;
     transform: scale(1.0, 1.0);
     transition-duration: 500ms;
     transition-timing-function: ease-out;
